peg to 0.2.11 and fix version

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,7 @@
 compat: v0
 id: btcpayserver
-version: 1.0.7
-title: btcpayserver
+version: 10.7.0
+title: BTCPay Server
 description:
   short: BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant and free.
   long: BTCPay Server is a free and open-source cryptocurrency payment processor which allows you to receive payments in Bitcoin (on-chain and via the Lightning Network) and altcoins directly, with no fees, transaction cost or a middleman. BTCPay is a non-custodial invoicing system which eliminates the involvement of a third-party. Payments with BTCPay go directly to your wallet, which increases the privacy and security. Your private keys are never required to receive payments to your BTCPay Server. There is no address re-use since each invoice uses a new address for receiving payments to your wallet.
@@ -13,8 +13,8 @@ image:
   type: tar
 mount: /datadir
 has-instructions: true
-os-version-required: ">=0.2.10"
-os-version-recommended: ">=0.2.10"
+os-version-required: ">=0.2.11"
+os-version-recommended: ">=0.2.11"
 assets: []
 hidden-service-version: v3
 install-alert: |
