get proper version tag and create s9 version

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,11 +1,11 @@
 compat: v0
 id: btcpayserver
-version: 100.7.0
+version: "1.0.7"
 title: BTCPay Server
 description:
   short: BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant and free.
   long: BTCPay Server is a free and open-source cryptocurrency payment processor which allows you to receive payments in Bitcoin (on-chain and via the Lightning Network) and altcoins directly, with no fees, transaction cost or a middleman. BTCPay is a non-custodial invoicing system which eliminates the involvement of a third-party. Payments with BTCPay go directly to your wallet, which increases the privacy and security. Your private keys are never required to receive payments to your BTCPay Server. There is no address re-use since each invoice uses a new address for receiving payments to your wallet.
-release-notes: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.0.7.0
+release-notes: 'This release corresponds to BTCPay Server build version 0 at tag version 1.0.7.0. See offical release notes here: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.0.7.0'
 ports:
   - internal: 23000
     tor: 80
@@ -31,7 +31,7 @@ actions:
     description: "Resets the policies settings if you cannot create a new user because registrations are disabled."
     warning: |
       If you can't create a new user because registrations are disabled in your Server Settings > Policies, you need to reset the policies settings. Please skip this step if you can create a new user on the front-end home page using the register button. Running this command will delete any other server settings currently being used.
-    allowed-statuses: 
+    allowed-statuses:
       - "RUNNING"
     command:
       - docker_entrypoint.sh
@@ -41,7 +41,7 @@ actions:
     description: "Resets the admin user with a temporary password."
     warning: |
       This action will fail if more than one admin user is present. If another admin user exists, please login to this admin account to add SMTP settings to utilize the default "Forgot Password" flow.
-    allowed-statuses: 
+    allowed-statuses:
       - "RUNNING"
     command:
       - docker_entrypoint.sh
