--- a/configurator/src/templates/.backupignore.template
+++ b/configurator/src/templates/.backupignore.template
@@ -1,2 +1,2 @@
-/datadir/start9/public/
-/datadir/start9/shared/
+/root/volumes/btcpayserver/start9/public
+/root/volumes/btcpayserver/start9/shared
