--- a/manifest.yaml
+++ b/manifest.yaml
@@ -22,7 +22,7 @@ install-alert: |
 
   The password you create on initial registration is not saved in EmbassyOS. Please save this password in a password manager, such as Bitwarden.
 
-  PLEASE READ *INSTRUCTIONS* after installation!!!
+  **PLEASE READ** the **INSTRUCTIONS** after installation!
 uninstall-alert: |
   READ CAREFULLY! Uninstalling BTCPay will result in permanent loss of data, including any stores, apps, or invoices created. The only way to ensure data is not lost to to backup the service and restore from this backup.
 restore-alert: |
