--- a/config_spec.yaml
+++ b/config_spec.yaml
@@ -129,12 +129,12 @@ lightning:
   tag:
     id: type
     name: Type
-    description: To enable BTCPay to use an internal lightning node, select the desired internal lighting implementation
+    description: Use this setting to grant BTCPay access to your Embassy's LND or c-lightning node. If you prefer to use an external Lightning node, or you do not intend to use Lightning, leave this setting blank. Please see the "Instructions" page for more details.
     variantNames: 
       none: No selection
       c-lightning: C-Lightning
       lnd: LND
-  name: Lightning Settings
+  name: Embassy Lightning Node
   description: Internal Lightning implementation configuration options
   default: none
   variants:
