--- a/configurator/src/templates/settings-nbx.config.template
+++ b/configurator/src/templates/settings-nbx.config.template
@@ -40,7 +40,7 @@ btc.node.endpoint={btc_p2p_host}:{btc_p2p_port}
 #btc.minutxovalue=1
 
 ## startheight defines from which block you will start scanning, if -1 is set, it will use current blockchain height
-#btc.startheight=-1
+btc.startheight=-1
 ## rescan forces a rescan from startheight
 #btc.rescan=0
 
