--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,12 +1,12 @@
 compat: v0
 id: btcpayserver
-version: "1.1.2.2"
+version: "1.1.2.3"
 title: BTCPay Server
 description:
   short: BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant and free.
   long: BTCPay Server is a free and open-source cryptocurrency payment processor which allows you to receive payments in Bitcoin (on-chain and via the Lightning Network) and altcoins directly, with no fees, transaction cost or a middleman. BTCPay is a non-custodial invoicing system which eliminates the involvement of a third-party. Payments with BTCPay go directly to your wallet, which increases the privacy and security. Your private keys are never required to receive payments to your BTCPay Server. There is no address re-use since each invoice uses a new address for receiving payments to your wallet.
 release-notes: |-
-  Update NBXplorer configuration to use start height and fix cookie authentication path.
+  Update version requirement for optional dependency LND.
 license-info:
   license: MIT
   url: https://github.com/btcpayserver/btcpayserver/blob/v1.1.2/LICENSE
@@ -203,7 +203,7 @@ dependencies:
     optional: Optionally use c-lightning for internal lightning network node implementation.
     mount-shared: true
   lnd:
-    version: "^0.12.1"
+    version: "^0.13.0"
     optional: Optionally use LND for internal lightning network node implementation.
     description: Used to communicate with the Lightning Network.
     mount-public: true
