--- a/manifest.yaml
+++ b/manifest.yaml
@@ -34,23 +34,19 @@ health-checks:
   explorer: 
     type: docker
     image: main
-    system: false
     entrypoint: sh
-    args: ["-c", "curl http://localhost:24444 || exit 1"]
-    mounts:
-      main: /datadir
+    args: ["-c", "curl btcpayserver.embassy:24444 || exit 1"]
     io-format: yaml
     critical: true
+    inject: true
   main: 
     type: docker
     image: main
-    system: false
     entrypoint: sh
-    args: ["-c", "curl http://localhost:23000 || exit 1"]
-    mounts:
-      main: /datadir
+    args: ["-c", "curl btcpayserver.embassy:23000 || exit 1"]
     io-format: yaml
     critical: true
+    inject: true
 config:
   get:
     type: docker
@@ -98,12 +94,14 @@ dependencies:
         args:
           - dependency
           - check
+          - btcpayserver
           - "btc-rpc-proxy"
           - /datadir
           - "/mnt/assets/btc-rpc-proxy_config_rules.yaml"
         mounts: 
           main: /datadir
           compat: /mnt/assets
+        io-format: yaml
       auto-configure:
         type: docker
         image: compat
@@ -112,10 +110,14 @@ dependencies:
         args: 
           - dependency
           - "auto-configure"
+          - btcpayserver
           - "btc-rpc-proxy"
+          - /datadir
           - "/mnt/assets/btc-rpc-proxy_config_rules.yaml"
         mounts:
+          main: /datadir
           compat: /mnt/assets
+        io-format: yaml
   bitcoind:
     version: "^0.21.1.2"
     requirement:
@@ -132,12 +134,14 @@ dependencies:
         args:
           - dependency
           - check
+          - btcpayserver
           - bitcoind
           - /datadir
           - "/mnt/assets/bitcoind_config_rules.yaml"
         mounts: 
           main: /datadir
           compat: /mnt/assets
+        io-format: yaml
       auto-configure:
         type: docker
         image: compat
@@ -146,10 +150,14 @@ dependencies:
         args: 
           - dependency
           - "auto-configure"
+          - btcpayserver
           - bitcoind
+          - /datadir
           - "/mnt/assets/bitcoind_config_rules.yaml"
         mounts:
           compat: /mnt/assets
+          main: /datadir
+        io-format: yaml
   lnd:
     version: ">=0.13.0.5 <0.14.0"
     critical: false
@@ -235,12 +243,12 @@ backup:
     args:
       - duplicity
       - create
-      - btcpayserver
       - /mnt/backup
       - /datadir
     mounts:
       BACKUP: /mnt/backup
       main: /datadir
+    io-format: yaml
   restore:
     type: docker
     image: compat
@@ -249,12 +257,12 @@ backup:
     args:
       - duplicity
       - restore
-      - btcpayserver
       - /mnt/backup
       - /datadir
     mounts:
       BACKUP: /mnt/backup
       main: /datadir
+    io-format: yaml
 actions:
   reset-server-policy:
     name: Reset Server Policies
@@ -265,12 +273,11 @@ actions:
       - running
     implementation:
       type: docker
-      image: compat
-      system: true
+      image: main
       entrypoint: docker_entrypoint.sh
       args: ["reset-server-policy"]
-      mounts:
-        main: /datadir
+      inject: true
+      io-format: yaml
   reset-admin-password:
     name: Reset Admin Password
     description: Resets the admin user with a temporary password.
@@ -280,9 +287,8 @@ actions:
       - running
     implementation:
       type: docker
-      image: compat
-      system: true
+      image: main
       entrypoint: docker_entrypoint.sh
       args: ["reset-admin-password"]
-      mounts:
-        main: /datadir
+      inject: true
+      io-format: yaml
